# android-studio-poet

./: BUILD.bazel  WORKSPACE  as_poet_config.json  maven_install.json
aspoet/src/main/kotlin/com/google/androidstudiopoet/: Injector.kt
aspoet/src/main/kotlin/com/google/androidstudiopoet/generators/: BazelWorkspaceGenerator.kt  ModuleBuildBazelGenerator.kt  SourceModuleGenerator.kt
aspoet/src/main/kotlin/com/google/androidstudiopoet/generators/android_modules/: AndroidModuleBuildBazelGenerator.kt  AndroidModuleGenerator.kt  AndroidRobolectricTestGenerator.kt
aspoet/src/main/kotlin/com/google/androidstudiopoet/generators/bazel/: BazelLang.kt
aspoet/src/main/kotlin/com/google/androidstudiopoet/models/: AndroidBuildBazelBlueprint.kt  AndroidBuildGradleBlueprint.kt  AndroidModuleBlueprint.kt  BazelWorkspaceBlueprint.kt  Dependencies.kt  ModuleBlueprint.kt  ModuleBuildBazelBlueprint.kt  ModuleBuildGradleBlueprint.kt  ModuleBuildSpecificationBlueprint.kt
aspoet/src/test/kotlin/com/google/androidstudiopoet/generators/: ModuleBuildBazelGeneratorTest.kt
aspoet/src/test/kotlin/com/google/androidstudiopoet/generators/android_modules/: AndroidModuleBuildBazelGeneratorTest.kt
aspoet/src/test/kotlin/com/google/androidstudiopoet/models/: AndroidBuildBazelBlueprintTest.kt  AndroidBuildGradleBlueprintTest.kt  ModuleBuildBazelBlueprintTest.kt
